Fix download button alignment for guest view, where favorite doesn't show

--- a/app/assets/stylesheets/components/single_and_playlists_player/track_content.scss
+++ b/app/assets/stylesheets/components/single_and_playlists_player/track_content.scss
@@ -145,6 +145,9 @@
     .edit_links_and_favorite {
       overflow: auto;
       box-shadow: none;
+      :first-child {
+        margin-left: 0!important;
+      }
       .edit_links {
         box-shadow: none;
         border-radius: 0;
